# GLGE_Graphic

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  perf.data
Backend/: Backend.h
Backend/API_Implementations/: API_Buffer.cpp  API_Framebuffer.h  API_Instance.cpp  API_Instance.h  API_Material.h  API_RenderPipeline.h  API_Shader.cpp
Backend/API_Implementations/OpenGL/: OGL_API.h  OGL_Buffer.cpp  OGL_Buffer.h  OGL_CommandBuffer.cpp  OGL_CommandBuffer.h  OGL_Commands.cpp  OGL_CycleBuffer.cpp  OGL_Framebuffer.cpp  OGL_Instance.cpp  OGL_Material.cpp  OGL_Material.h  OGL_Shader.h  OGL_Texture.h  OGL_Window.cpp  OGL_Window.h
Backend/Objects/: CompressedTransform.h  RenderObjectSystem.h
Frontend/: Camera.cpp  Camera.h  Common.cpp  Common.h  Compute.cpp  Compute.h  FilterMode.h  Framebuffer.cpp  Framebuffer.h  Frontend.h  Keys.h  Material.cpp  Mouse.h  Shader.h  Texture.cpp  Texture.h  TextureAsset.h
Frontend/RenderAPI/: RenderAPI.h  RenderMeshRegistry.h  RenderPipeline.h  Renderer.h
assets/mesh/: Cube.glb  Cube.gm  Suzan.gm  Suzane.fbx  Suzane.gm  Terrain.gm
assets/shader/: buff.fs  draw.cs  main.fs  main.vs
src/: GLGE_Core  GLGE_ImGuiImpl.cpp  GLGE_ImGuiImpl.h  Structure.txt  main.cpp
src/Example/: All.h
src/Example/FirstPersonExample/: CMakeLists.txt  FirstPersonExample.cpp  FirstPersonExample.h
src/GLGEGraphic/: CMakeLists.txt  GLGEGraphic.h
src/GLGEGraphic/Backend/: Backend.h  Instance.cpp  Instance.h  RenderObjectSystem.cpp  RenderObjectSystem.h
src/GLGEGraphic/Backend/API_Implementations/: API_Buffer.cpp  API_Buffer.h  API_CommandBuffer.h  API_CycleBuffer.cpp  API_CycleBuffer.h  API_Instance.cpp  API_Instance.h  API_Material.h  API_MemoryArena.cpp  API_MemoryArena.h  API_RenderMesh.cpp  API_RenderMesh.h  API_RenderPipeline.h  API_Shader.h  API_Texture.h  API_Window.h  AllImplementations.h
src/GLGEGraphic/Backend/API_Implementations/OpenGL/: OGL_API.h  OGL_Buffer.cpp  OGL_Buffer.h  OGL_CommandBuffer.cpp  OGL_Commands.cpp  OGL_Commands.h  OGL_CycleBuffer.cpp  OGL_CycleBuffer.h  OGL_Framebuffer.h  OGL_Instance.cpp  OGL_Instance.h  OGL_Material.cpp  OGL_Material.h  OGL_MemoryArena.h  OGL_RenderPipeline.cpp  OGL_RenderPipeline.h  OGL_Shader.cpp  OGL_Shader.h  OGL_Texture.cpp  OGL_Texture.h  OGL_Window.cpp  OGL_Window.h
src/GLGEGraphic/Backend/Objects/: CompressedTransform.h  RenderObjectSystem.cpp
src/GLGEGraphic/Frontend/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Common.cpp  Common.h  Compute.cpp  Frontend.h  Keys.cpp  Keys.h  Material.cpp  Material.h  Mouse.cpp  Mouse.h  RenderMesh.cpp  RenderMesh.h  RenderPipeline.cpp  RenderPipeline.h  Shader.cpp  Shader.h  StructuredBuffer.h  Texture.cpp  Texture.h  TextureAsset.cpp  TextureAsset.h
src/GLGEGraphic/Frontend/RenderAPI/: RenderMesh.cpp  RenderMesh.h  RenderMeshRegistry.cpp  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.h  Renderer.cpp  Renderer.h
src/GLGEGraphic/Frontend/Window/: Window.cpp  Window.h  WindowSettings.h
